# zephyr

samples/modules/tflite-micro/linear_regression/: README.md
samples/modules/tflite-micro/linear_regression/src/: linear_regression.cpp  output_handler.cpp
samples/modules/tflite-micro/micro_speech/: CMakeLists.txt  README.md  prj.conf  sample.yaml
samples/modules/tflite-micro/micro_speech/microfrontend/lib/: filterbank.h
samples/modules/tflite-micro/micro_speech/src/: audio_preprocessor_int8_model_data.h  audio_provider.cc  audio_provider.h  command_responder.cc  command_responder.cpp  command_responder.h  feature_provider.cc  feature_provider.h  main.c  main.cc  main_functions.cc  main_functions.cpp  main_functions.h  main_functions.hpp  micro_feature_generator.cc  micro_model_settings.h  micro_speech_quantized_model_data.h  model.h  no_1000ms_audio_data.h  no_30ms_audio_data.h  noise_1000ms_audio_data.h  recognize_commands.cc  recognize_commands.h  recognize_commands_test.cc  silence_1000ms_audio_data.h  yes_1000ms_audio_data.h  yes_30ms_audio_data.h
samples/modules/tflite-micro/micro_speech_dev/: README.md
samples/modules/tflite-micro/micro_speech_dev/src/: audio_provider.cpp  command_responder.cpp  main.c  main_functions.cpp
